<resources>
    <string name="app_name">Travel Pal</string>
    <string name="title_activity_maps">Travel Pal Maps</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="address_text">"Name: %1$s \n Address: %2$s \n Timestamp: %3$tr"</string>
    <string name="location_query_text">%1$f,%2$f</string>
    <string name="location_query_id">place_id:%1$s</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_login">Me</string>
    <string name="full_name_hint">Full Name</string>
    <string name="am_driver">Driver?</string>
    <string name="current_location_update">Update Current Location</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_anonymously">Continue Anonymously</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="duration_distance">%1$s (%2$s)</string>
    <string name="price_string">%1$s FCFA</string>
    <string name="book_button_text">Book</string>
    <string name="details_text">Details</string>
    <string name="origin_details_text">Origin</string>
    <string name="destination_text">Destination</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="phone_placeholder">Phone Number</string>
    <string name="phone_prompt">Enter phone number to pay booking fee</string>
</resources>
