<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailsActivity">

    <ScrollView
        android:id="@+id/details_main_scroll"
        android:layout_width="358dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/details_main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#46C5F5E0"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/destination_details_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="0.1"
                            app:srcCompat="@drawable/ic_my_location_black_24dp" />

                        <TextView
                            android:id="@+id/origin_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:text="@string/origin_details_text"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="0.1"
                            app:srcCompat="@drawable/ic_location_on_black_24dp" />

                        <TextView
                            android:id="@+id/destination_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:text="@string/origin_details_text"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/distance_duration_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:text="@string/origin_details_text"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/price_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:text="@string/origin_details_text"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="336dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_main_scroll">

        <LinearLayout
            android:id="@+id/notifiables_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phone_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_prompt" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_placeholder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/action_button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/book_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/book_button_text" />
        <ProgressBar
            android:id="@+id/loading_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/book_button"
            app:layout_constraintStart_toStartOf="@+id/book_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>